test/tests/operators/from_mysql/error_tls_certfile_type.txt
error: `tls.certfile` must be a string
  --> tests/operators/from_mysql/error_tls_certfile_type.tql:12:16
   |
12 |            tls={certfile: true}
   |                ^^^^^^^^^^^^^^^^ 
   |
